gnu_linux/etc/iptables.conf
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

#---------------------------------------------------------------
# Allow masquerading
# - Interface eth1 is the internet interface
# - Interface eth0 is the private network interface
# ALSO ENABLE ipfw in sysctl.conf
#---------------------------------------------------------------
#-A POSTROUTING -o eth1 -s 10.3.3.0/24 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT

## Allow essential port traffic
# SSH from anywhere
-A INPUT -p tcp -m multiport --dports 22 -j ACCEPT
# SNMP snmpd and squidsnmp from internal network
-A INPUT -p udp -s 10.42.0.0/16 --dport 161 -j ACCEPT
-A INPUT -p udp -s 10.42.0.0/16 --dport 3401 -j ACCEPT
# apache, so we can see squid stats
-A INPUT -p tcp -m multiport --dports 81,8111,8112 -j ACCEPT
-A INPUT -p udp -m multiport --dports 8113 -j ACCEPT
# TCP/UDP squid from peers
-A INPUT -p tcp -s 10.42.42.0/24 -m multiport --dports 80,3128,3130 -j ACCEPT
-A INPUT -p udp -s 10.42.42.0/24 -m multiport --dports 80,3128,3130 -j ACCEPT
# 9335 for Portable Server
-A INPUT -p tcp -s 10.42.42.0/24 -m multiport --dports 9335 -j ACCEPT
# UDP to broadcast addr
-A INPUT -p udp -d 10.42.42.255 -s 10.42.42.0/24 -j ACCEPT

# DNS, tftp and DHCP
#-A INPUT -p udp -i eth0 -m multiport --dports 53,67,68,69 -j ACCEPT

### Device-based exceptions
#-A INPUT -i eth0 -s 10.42.42.0/24 -j ACCEPT

#---------------------------------------------------------------
# Prior to masquerading, the packets are routed via the filter
# table's FORWARD chain.
# Allowed outbound: New, established and related connections
# Allowed inbound : Established and related connections
#---------------------------------------------------------------
#-A FORWARD -i eth1 -o eth0 -m state --state ESTABLISHED,RELATED -j ACCEPT
#-A FORWARD -i eth0 -o eth1 -j ACCEPT

### Default DROP and some logging
#-A INPUT -j LOG --log-level info --log-prefix "firewall:"
-A FORWARD -j DROP
-A INPUT -j DROP

COMMIT
